--- a/.output/public/200.html
+++ b/.output/public/200.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>@tailwind base;@tailwind components;@tailwind utilities;</style>
-<link rel="modulepreload" as="script" crossorigin href="/portafolio/_nuxt/Bekb7gQr.js">
-<link rel="prefetch" as="script" crossorigin href="/portafolio/_nuxt/DrdOYph5.js">
-<link rel="prefetch" as="script" crossorigin href="/portafolio/_nuxt/Co41ZJEJ.js">
-<link rel="prefetch" as="script" crossorigin href="/portafolio/_nuxt/CTtnwXay.js">
-<script type="module" src="/portafolio/_nuxt/Bekb7gQr.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756194190476,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/portafolio/",buildId:"895151e4-2a1e-49ac-9a0d-c749b56f6529",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bekb7gQr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DrdOYph5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Co41ZJEJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CTtnwXay.js">
+<script type="module" src="/_nuxt/Bekb7gQr.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756587079100,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"38fad2c5-0e0e-43be-91c3-ed367ae729e9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
